fix: Export sub field error